--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
